--- a/server/views/confirmationEmail.handlebars
+++ b/server/views/confirmationEmail.handlebars
@@ -2,7 +2,7 @@
 <html >
   <head>
     <meta charset="UTF-8">
-    <title>Confirmar E-mail</title>
+    <title>Confirmação de E-mail</title>
     
   </head>
 
